tests/samples/negative/pointers/address_of_const.ax
module address_of_const;

const VALUE: i32 = 7;

fn main() -> i32 {
  let pointer: *const i32 = &VALUE;
  return *pointer;
}
